--- a/TaxFree/Podfile
+++ b/TaxFree/Podfile
@@ -9,5 +9,7 @@ target 'TaxFree' do
   pod 'Fabric', '~> 1.10.2'
   pod 'Crashlytics', '~> 3.13.4'
   pod 'Firebase/Analytics'
+  pod 'DKChainableAnimationKit', '~> 2.0.0'
+  pod 'Toast-Swift', '~> 5.0.0'
 
 end
